k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  selector:
    matchLabels:
      app: python-app
  replicas: 1 # Specifies the desired number of Pod replicas
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: albertchisoro/python-app:SNAPSHOT # The container image to use
        ports:
        - containerPort: 5000 # The port the container exposes
